# POR-PolygonObjectReader

./: CMakeLists.txt  POR.cfg.h
include/: POR.cfg.h  POR.hpp  wfobj.profile.hpp
src/: POR.cpp  Polygon.cpp  out.cpp  wfobj.profile.cpp
tests/: CMakeLists.txt  wfobj.test.cpp
